fix alignment issue

--- a/frontend/src/pages/Rider/page.module.css
+++ b/frontend/src/pages/Rider/page.module.css
@@ -5,7 +5,8 @@
 .header {
   text-align: left;
   font-size: 1.75rem;
-  margin: 0 1rem 0 0;
+  margin: 0 1rem 0 -0.25rem;
+  padding: 0 0 0 0;
 }
 
 .pageTitle {
